--- a/custom_components/pycupra/manifest.json
+++ b/custom_components/pycupra/manifest.json
@@ -7,7 +7,8 @@
     "config_flow": true,
     "codeowners": ["@WulfgarW"],
     "requirements": [
-        "homeassistant>=2021.12.0"
+        "pycupra>=0.0.1",
+        "homeassistant>=2025.1.0"
     ],
     "version": "0.0.1",
     "iot_class": "cloud_polling"
