--- a/custom_components/pycupra/services.yaml
+++ b/custom_components/pycupra/services.yaml
@@ -278,7 +278,7 @@ send_destination:
         number:
           min: -90.0
           max: 90.0
-          step: 0.0000001
+          step: any
           mode: box
           unit_of_measurement: °
     longitude:
@@ -289,7 +289,7 @@ send_destination:
         number:
           min: -180.0
           max: 180.0
-          step: 0.0000001
+          step: any
           mode: box
           unit_of_measurement: °
     poiProvider:
