- Added support for vehicles with auxiliary heating, that does not support to set the target temperature when starting the heater - Corrected typos for the trip statistics instruments for auxiliary consumption - Changed instrument name for attribute "climatisation_without_external_power" from "Climatisation from battery" to "Climatisation setting off-grid climatisation" and changed the icon - Removed the fields 'days' and 'spin' from action set_auxiliary_heating_timer_schedule - Added support for the firebase notification 'charging-profile-changed' (closes #23) - Closes #25

--- a/custom_components/pycupra/services.yaml
+++ b/custom_components/pycupra/services.yaml
@@ -309,21 +309,21 @@ set_auxiliary_heating_timer_schedule:
       example: "2021-06-31"
       selector:
         text:
-    days:
-      name: Days
-      description: "Weekday mask for recurring schedule, mon-sun - (required for recurring schedule, not single)."
-      example: "yyynnnn"
-      selector:
-        text:
-    spin:
-      name: S-PIN
-      description: >
-        The S-PIN for the vehicle
-      required: true
-      advanced: true
-      example: 1234
-      selector:
-        text:
+    #days:
+    #  name: Days
+    #  description: "Weekday mask for recurring schedule, mon-sun - (required for recurring schedule, not single)."
+    #  example: "yyynnnn"
+    #  selector:
+    #    text:
+    #spin:
+    #  name: S-PIN
+    #  description: >
+    #    The S-PIN for the vehicle
+    #  required: true
+    #  advanced: true
+    #  example: 1234
+    #  selector:
+    #    text:
 set_climatisation_timer_schedule:
   name: Set climatisation timer schedule
   description: >
